I probably finished the abstract. Yay!

--- a/gcb_abstract/amyloids.bib
+++ b/gcb_abstract/amyloids.bib
@@ -28,13 +28,13 @@ CONTACT: malgorzata.kotulska@pwr.edu.pl.},
 	pmid = {26188543}
 }
 
-@misc{biogram2015,
-  author = {Michal Burdukiewicz and Piotr Sobczyk and Chris Lauber},
-  title = {biogram: analysis of biological sequences using n-grams},
+@manual{biogram2015,
+  title = {{biogram}: analysis of biological sequences using n-grams},
+  author = {Burdukiewicz, Michal and Sobczyk, Piotr and Lauber, Chris},
   year = {2015},
   note = {R package version 1.2},
   url = {http://CRAN.R-project.org/package=biogram}
-)
+}
 
 @article{gasior_fish_2014,
 	title = {{FISH} {Amyloid} – a new method for finding amyloidogenic segments in proteins based on site specific co-occurence of aminoacids},
@@ -55,4 +55,44 @@ CONTACT: malgorzata.kotulska@pwr.edu.pl.},
 	keywords = {Amyloid, Hot spot, Intramolecular contact sites, machine learning},
 	pages = {54},
 	file = {Full Text PDF:/home/michal/.zotero/zotero/pwethkyi.default/zotero/storage/T2RMCZXQ/Gasior i Kotulska - 2014 - FISH Amyloid – a new method for finding amyloidoge.pdf:application/pdf;Snapshot:/home/michal/.zotero/zotero/pwethkyi.default/zotero/storage/D8REHEWN/54.html:text/html}
+}
+
+@article{walsh_pasta_2014,
+	title = {{PASTA} 2.0: an improved server for protein aggregation prediction},
+	volume = {42},
+	issn = {0305-1048, 1362-4962},
+	shorttitle = {{PASTA} 2.0},
+	url = {http://nar.oxfordjournals.org/content/42/W1/W301},
+	doi = {10.1093/nar/gku399},
+	abstract = {The formation of amyloid aggregates upon protein misfolding is related to several devastating degenerative diseases. The propensities of different protein sequences to aggregate into amyloids, how they are enhanced by pathogenic mutations, the presence of aggregation hot spots stabilizing pathological interactions, the establishing of cross-amyloid interactions between co-aggregating proteins, all rely at the molecular level on the stability of the amyloid cross-beta structure. Our redesigned server, PASTA 2.0, provides a versatile platform where all of these different features can be easily predicted on a genomic scale given input sequences. The server provides other pieces of information, such as intrinsic disorder and secondary structure predictions, that complement the aggregation data. The PASTA 2.0 energy function evaluates the stability of putative cross-beta pairings between different sequence stretches. It was re-derived on a larger dataset of globular protein domains. The resulting algorithm was benchmarked on comprehensive peptide and protein test sets, leading to improved, state-of-the-art results with more amyloid forming regions correctly detected at high specificity. The PASTA 2.0 server can be accessed at http://protein.bio.unipd.it/pasta2/.},
+	language = {en},
+	number = {W1},
+	urldate = {2015-07-24},
+	journal = {Nucleic Acids Research},
+	author = {Walsh, Ian and Seno, Flavio and Tosatto, Silvio C. E. and Trovato, Antonio},
+	month = jul,
+	year = {2014},
+	pmid = {24848016},
+	pages = {W301--W307},
+	file = {Full Text PDF:/home/michal/.zotero/zotero/pwethkyi.default/zotero/storage/5NA2MICC/Walsh i in. - 2014 - PASTA 2.0 an improved server for protein aggregat.pdf:application/pdf;Snapshot:/home/michal/.zotero/zotero/pwethkyi.default/zotero/storage/TNH4KRG9/W301.html:text/html}
+}
+
+@article{fandrich_oligomeric_2012,
+	series = {Amyloid {Structure}, {Function}, and {Molecular} {Mechanisms} ({Part} {II})},
+	title = {Oligomeric {Intermediates} in {Amyloid} {Formation}: {Structure} {Determination} and {Mechanisms} of {Toxicity}},
+	volume = {421},
+	issn = {0022-2836},
+	shorttitle = {Oligomeric {Intermediates} in {Amyloid} {Formation}},
+	url = {http://www.sciencedirect.com/science/article/pii/S0022283612000277},
+	doi = {10.1016/j.jmb.2012.01.006},
+	abstract = {Oligomeric intermediates are non-fibrillar polypeptide assemblies that occur during amyloid fibril formation and that are thought to underlie the aetiology of amyloid diseases, such as Alzheimer's disease, Parkinson's disease and Huntington's disease. Focusing primarily on the oligomeric states formed from Alzheimer's disease β-amyloid (Aβ) peptide, this review will make references to other polypeptide systems, highlighting common principles or sequence-specific differences. The covered topics include the structural properties and polymorphism of oligomers, the biophysical mechanism of peptide self-assembly and its role for pathogenicity in amyloid disease. Oligomer-dependent toxicity mechanisms will be explained along with recently emerging possibilities of interference.},
+	number = {4–5},
+	urldate = {2015-07-24},
+	journal = {Journal of Molecular Biology},
+	author = {Fändrich, Marcus},
+	month = aug,
+	year = {2012},
+	keywords = {Amyloid, intermediate, oligomer, protein folding disease, structure},
+	pages = {427--440},
+	file = {ScienceDirect Full Text PDF:/home/michal/.zotero/zotero/pwethkyi.default/zotero/storage/TDSVH6TX/Fändrich - 2012 - Oligomeric Intermediates in Amyloid Formation Str.pdf:application/pdf;ScienceDirect Snapshot:/home/michal/.zotero/zotero/pwethkyi.default/zotero/storage/Q2NJX65V/S0022283612000277.html:text/html}
 }
