--- a/gcb_abstract_poster/amyloid_poster.tex
+++ b/gcb_abstract_poster/amyloid_poster.tex
@@ -143,7 +143,16 @@ Stuff
 \end{block}
 \vfill
 
+\begin{block}{AmyLoad database}
 
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
+\includegraphics[width=\maxwidth]{figure/AmyLoad-1} 
+
+\end{knitrout}
+
+\end{block}
+\vfill
 
 
 
