--- a/gcb_abstract_poster/amyloids.bib
+++ b/gcb_abstract_poster/amyloids.bib
@@ -28,14 +28,6 @@ CONTACT: malgorzata.kotulska@pwr.edu.pl.},
 	pmid = {26188543}
 }
 
-@manual{biogram2015,
-  title = {{biogram}: analysis of biological sequences using n-grams},
-  author = {Burdukiewicz, Michal and Sobczyk, Piotr and Lauber, Chris},
-  year = {2015},
-  note = {R package version 1.2},
-  url = {http://CRAN.R-project.org/package=biogram}
-}
-
 @article{gasior_fish_2014,
 	title = {{FISH} {Amyloid} – a new method for finding amyloidogenic segments in proteins based on site specific co-occurence of aminoacids},
 	volume = {15},
@@ -95,4 +87,12 @@ CONTACT: malgorzata.kotulska@pwr.edu.pl.},
 	keywords = {Amyloid, intermediate, oligomer, protein folding disease, structure},
 	pages = {427--440},
 	file = {ScienceDirect Full Text PDF:/home/michal/.zotero/zotero/pwethkyi.default/zotero/storage/TDSVH6TX/Fändrich - 2012 - Oligomeric Intermediates in Amyloid Formation Str.pdf:application/pdf;ScienceDirect Snapshot:/home/michal/.zotero/zotero/pwethkyi.default/zotero/storage/Q2NJX65V/S0022283612000277.html:text/html}
+}
+
+@book{burdukiewicz_biogram:_2015,
+	title = {biogram: analysis of biological sequences using n-grams},
+	url = {http://CRAN.R-project.org/package=biogram},
+	author = {Burdukiewicz, Michal and Sobczyk, Piotr and Lauber, Chris},
+	year = {2015},
+	note = {R package version 1.2}
 }
