added clusterization scheme to poster

--- a/gcb_abstract_poster/amyloid_poster.Rnw
+++ b/gcb_abstract_poster/amyloid_poster.Rnw
@@ -31,6 +31,7 @@
 \useinnertheme{rectangles}
 \setbeamercolor{item projected}{bg=darkred}
 % \setbeamertemplate{enumerate items}[default]
+\setbeamertemplate{caption}{\insertcaption} 
 \setbeamertemplate{navigation symbols}{}
 \setbeamercovered{transparent}
 \setbeamercolor{block title}{fg=darkred}
@@ -45,7 +46,7 @@
 \setbeamercolor*{itemize subsubitem}{fg=darkred}
 
 \newlength{\columnheight}
-\setlength{\columnheight}{92cm}
+\setlength{\columnheight}{93cm}
 \renewcommand{\thetable}{}
 \def\andname{,}
 \authornote{}
@@ -53,11 +54,9 @@
 \renewcommand{\APACrefatitle}[2]{}
 \renewcommand{\bibliographytypesize}{\footnotesize} 
 \renewcommand{\APACrefYearMonthDay}[3]{%
-{\BBOP}{#1}
-{\BBCP}
+  {\BBOP}{#1}
+  {\BBCP}
 }
-
-\providecommand{\e}[1]{\ensuremath{\times 10^{#1}}}
 
 \begin{document}
 
@@ -69,11 +68,11 @@ library(ggplot2)
 library(gridExtra)
 library(xtable)
 
-size_mod <- 0
+size_mod <- 4
 cool_theme <- theme(plot.background=element_rect(fill = "transparent",
                                                  colour = "transparent"),
                     panel.grid.major = element_line(colour="lightgrey", linetype = "dashed"),
-                    panel.background = element_rect(fill = "transparent",colour = "black"),
+                    panel.background = element_rect(fill = "white",colour = "black"),
                     legend.background = element_rect(fill="NA"),
                     legend.position = "bottom",
                     axis.text = element_text(size=12 + size_mod),
@@ -117,19 +116,36 @@ Stuff
 
 \begin{block}{AmyLoad database}
 
+The sequences used in the study were extracted from AmyLoad database~\citep{wozniak_amyload:_2015}.
+
 <<AmyLoad, echo = FALSE, message=FALSE, fig.width=14>>=
-ggplot(filter(seq_lengths, len < 50), aes(x = len, fill = tar)) +
-  geom_histogram(alpha = 0.5, position = "dodge") +
-  scale_fill_discrete("Amyloid") +
-  scale_x_continuous("Length") +
+ggplot(seq_inter_ct, aes(x = len, y = Freq, fill = tar, label = paste0(round(prop, 4) * 100, "%"))) +
+  geom_bar(position = "dodge", stat = "identity") +
+  scale_fill_manual("Amyloid", values = c("tan2", "skyblue")) +
+  scale_x_discrete("Length") +
   scale_y_continuous("Count") + 
+  geom_text(position = position_dodge(width = 0.9), vjust=-0.25) +
   cool_theme
 @
+
+The height of the bar is equal to the number of sequences within given length interval in the database. The percentage above the bar represent fraction sequences within given length interval among amyloid and non-amyloid sequences.
 
 \end{block}
 \vfill
 
+\begin{block}{Clustering of amino acids}
 
+contactivity~\citep{wozniak_characteristics_2014}
+
+
+\begin{enumerate}[1.]
+\item 10 physicochemical scale were extracted from AAIndex database~\citep{kawashima_aaindex:_2008} and normalized between normalized between 0 i 1.
+\item All combinations of characteristics (only one scale per property) were clustered using Euclidean distance and Ward's method.
+\item Each clustering was divided into 3 to 6 groups.
+\end{enumerate}
+
+\end{block}
+\vfill
 
 }
 \end{minipage}
@@ -151,7 +167,16 @@ ggplot(filter(seq_lengths, len < 50), aes(x = len, fill = tar)) +
 \begin{block}{More stuff}
 Stuff
 \end{block}
-  
+\vfill
+
+\begin{block}{Bibliography}
+  \tiny{
+  \bibliographystyle{apalike}
+  \bibliography{amyloids}
+  }
+  \end{block}
+  \vfill
+
 }
 \end{minipage}
 \end{beamercolorbox}
