--- a/gcb_abstract_poster/amyloids.bib
+++ b/gcb_abstract_poster/amyloids.bib
@@ -96,3 +96,40 @@ CONTACT: malgorzata.kotulska@pwr.edu.pl.},
 	year = {2015},
 	note = {R package version 1.2}
 }
+
+@article{kawashima_aaindex:_2008,
+	title = {{AAindex}: amino acid index database, progress report 2008},
+	volume = {36},
+	issn = {0305-1048, 1362-4962},
+	shorttitle = {{AAindex}},
+	url = {http://nar.oxfordjournals.org/content/36/suppl_1/D202},
+	doi = {10.1093/nar/gkm998},
+	abstract = {AAindex is a database of numerical indices representing various physicochemical and biochemical properties of amino acids and pairs of amino acids. We have added a collection of protein contact potentials to the AAindex as a new section. Accordingly AAindex consists of three sections now: AAindex1 for the amino acid index of 20 numerical values, AAindex2 for the amino acid substitution matrix and AAindex3 for the statistical protein contact potentials. All data are derived from published literature. The database can be accessed through the DBGET/LinkDB system at GenomeNet (http://www.genome.jp/dbget-bin/www\_bfind?aaindex) or downloaded by anonymous FTP (ftp://ftp.genome.jp/pub/db/community/aaindex/).},
+	language = {en},
+	number = {suppl 1},
+	urldate = {2015-07-27},
+	journal = {Nucleic Acids Research},
+	author = {Kawashima, Shuichi and Pokarowski, Piotr and Pokarowska, Maria and Kolinski, Andrzej and Katayama, Toshiaki and Kanehisa, Minoru},
+	month = jan,
+	year = {2008},
+	pmid = {17998252},
+	pages = {D202--D205},
+	file = {Full Text PDF:/home/michal/.zotero/zotero/pwethkyi.default/zotero/storage/CVZ69JX5/Kawashima i in. - 2008 - AAindex amino acid index database, progress repor.pdf:application/pdf;Snapshot:/home/michal/.zotero/zotero/pwethkyi.default/zotero/storage/5T6X5RC6/D202.html:text/html}
+}
+
+@article{wozniak_characteristics_2014,
+	title = {Characteristics of protein residue-residue contacts and their application in contact prediction},
+	volume = {20},
+	issn = {1610-2940},
+	url = {http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4221654/},
+	doi = {10.1007/s00894-014-2497-9},
+	abstract = {Contact sites between amino acids characterize important structural features of a protein. We investigated characteristics of contact sites in a representative set of proteins and their relations between protein class or topology. For this purpose, we used a non-redundant set of 5872 protein domains, identically categorized by CATH and SCOP databases. The proteins represented alpha, beta, and alpha+beta classes. Contact maps of protein structures were obtained for a selected set of physical distances in the main backbone and separations in protein sequences. For each set a dependency between contact degree and distance parameters was quantified. We indicated residues forming contact sites most frequently and unique amino acid pairs which created contact sites most often within each structural class. Contact characteristics of specific topologies were compared to the characteristics of their protein classes showing protein groups with a distinguished contact characteristic. We showed that our results could be used to improve the performance of recent top contact predictor — direct coupling analysis. Our work provides values of contact site propensities that can be involved in bioinformatic databases.},
+	number = {11},
+	urldate = {2015-07-27},
+	journal = {Journal of Molecular Modeling},
+	author = {Wozniak, Pawel P. and Kotulska, Malgorzata},
+	year = {2014},
+	pmid = {25374390},
+	pmcid = {PMC4221654},
+	file = {PubMed Central Full Text PDF:/home/michal/.zotero/zotero/pwethkyi.default/zotero/storage/VNQ9WCRQ/Wozniak i Kotulska - 2014 - Characteristics of protein residue-residue contact.pdf:application/pdf}
+}
