--- a/gcb_abstract_poster/amyloids.bib
+++ b/gcb_abstract_poster/amyloids.bib
@@ -133,3 +133,15 @@ CONTACT: malgorzata.kotulska@pwr.edu.pl.},
 	pmcid = {PMC4221654},
 	file = {PubMed Central Full Text PDF:/home/michal/.zotero/zotero/pwethkyi.default/zotero/storage/VNQ9WCRQ/Wozniak i Kotulska - 2014 - Characteristics of protein residue-residue contact.pdf:application/pdf}
 }
+
+@article{liaw_classification_2002,
+	title = {Classification and {Regression} by {randomForest}},
+	volume = {2},
+	url = {http://CRAN.R-project.org/doc/Rnews/},
+	number = {3},
+	journal = {R News},
+	author = {Liaw, Andy and Wiener, Matthew},
+	year = {2002},
+	keywords = {classification, decision\_trees, machine\_learning, r, random\_forest, regression},
+	pages = {18--22}
+}
