--- a/gcb_abstract_poster/amyloid_poster.Rnw
+++ b/gcb_abstract_poster/amyloid_poster.Rnw
@@ -125,7 +125,7 @@ ggplot(seq_inter_ct, aes(x = len, y = Freq, fill = tar, label = paste0(round(pro
   scale_x_discrete("Length") +
   scale_y_continuous("Count") + 
   geom_text(position = position_dodge(width = 0.9), vjust=-0.25) +
-  cool_theme
+  cool_theme #+ theme(legend.position = "right")
 @
 
 The height of the bar is equal to the number of sequences within given length interval in the database. The percentage above the bar represent fraction sequences within given length interval among amyloid and non-amyloid sequences.
@@ -135,17 +135,59 @@ The height of the bar is equal to the number of sequences within given length in
 
 \begin{block}{Clustering of amino acids}
 
-contactivity~\citep{wozniak_characteristics_2014}
-
-
 \begin{enumerate}[1.]
-\item 10 physicochemical scale were extracted from AAIndex database~\citep{kawashima_aaindex:_2008} and normalized between normalized between 0 i 1.
+\item Nine scales representing properties important in the amylogenicity: hydrophobicity, size polarity and solvent accessibility from AAIndex database~\citep{kawashima_aaindex:_2008} were chosen. Additionally, two frequencies of forming contact sites~\citep{wozniak_characteristics_2014} were added.
+\item Scales were normalized between 0 i 1.
 \item All combinations of characteristics (only one scale per property) were clustered using Euclidean distance and Ward's method.
-\item Each clustering was divided into 3 to 6 groups.
+\item Each clustering was divided into 3 to 6 groups creating 144 encodings of amino acids.
+\item Redundant 51 encodings (identical to other encodings) were removed.
 \end{enumerate}
 
 \end{block}
 \vfill
+
+
+\begin{block}{Encoding distance}
+
+The encoding distance between \textbf{A} and \textbf{B} is defined as the minimum number of amino acids that have to be moved between subgroups of encoding to make \textbf{A} identical to \textbf{B} (order of subgroups in the encoding and amino acids in a group is unimportant).
+
+\begin{columns}
+\column{.4\textwidth}
+<<encodingDistanceA, echo = FALSE, message=FALSE, results='asis'>>=
+enc2df <- function(x)
+  data.frame(Group = names(x), Elements = sapply(x, paste0, collapse = ", "))
+l1 <- list('1' = c("a", "b", "c"),
+             '2' = c("d", "e"))
+l2 <- list('1' = c("a", "b"),
+             '2' = c("d", "e", "c"))
+
+print(xtable(enc2df(l1), "Encoding \\textbf{A}."), include.rownames = FALSE)
+@
+\column{.4\textwidth}
+
+<<encodingDistanceB, echo = FALSE, message=FALSE, results='asis'>>=
+print(xtable(enc2df(l2), "Encoding \\textbf{B}."), include.rownames = FALSE)
+@
+\end{columns}
+
+The encoding distance between \textbf{A} and \textbf{B} is 1 (element \textit{c} must be moved from Group 2 to Group 1).
+
+\end{block}
+\vfill
+
+\begin{block}{Evaluation}
+
+\begin{enumerate}[1.]
+\item Sequences shorter than 6 amino acids were discarded.
+\item From each sequence 5-grams were extracted. In case of positive sequences, all extracted 5-grams were labelled as positive. In case of negative sequences, all extracted 5-grams were marked as negative.
+\item For each encoding three Random Forests~\citep{liaw_classification_2002} were trained on sequences with length respectively a) 6 amino acids, b) 10 amino acids or shorter, c) 15 amino acids or shorter.
+\item All classifiers were evaluated in the 5-fold cross-validation. The sequence was labelled as positive if at least one 5-gram was assessed as amylogenic.
+\item The cross-validation was repeated 8 times.
+\end{enumerate}
+
+\end{block}
+\vfill
+
 
 }
 \end{minipage}
